# GLFM

./: .gitignore  :  CNAME  README.md  README.rst  README.txt  Readme.txt  matrix_completion.m  simMiss.m
Ccode/: GeneralFunctions.cpp  GeneralFunctions.h  IBPsampler.cpp  InferenceFunctions.cpp  InferenceFunctions.h
GLFMmatlab/: Description.m  Readme.txt  demo_completion_MNIST.m  main_toy.m  matrix_completion.m  print_patterns.m  process_simProstate.m  simCounties.m  simMiss.m  simMiss.m~  simPbc.m  simProstate.m  visualize_dims.m
GLFMpython/: GLFM.py  GLFM_class.py  GeneralFunctions.cpp  IBPsampler_debugging_for_type_o.cpp  InferenceFunctions.cpp  InferenceFunctions.h  Installation.rtf  Readme.txt  aux.py  check_GLFM_infer_call.py  demo_data_exploration.ipynb  demo_data_exploration.py  demo_data_exploration_improved.py  demo_toy_images.py  (+17 more)
src/Ccode/wrapper_R/: .Rapp.history  RGLFM.cpp  Readme.md  config.status  configure.ac
src/Ccode/wrapper_R/RGLFM/: DESCRIPTION  NAMESPACE
src/Ccode/wrapper_R/RGLFM/R/: RcppExports.R
src/Ccode/wrapper_R/RGLFM/man/: RGLFM-package.Rd
src/Ccode/wrapper_R/RGLFM/src/: GeneralFunctions.cpp  GeneralFunctions.h  InferenceFunctions.cpp  RGLFM.cpp  RcppExports.cpp
src/Ccode/wrapper_R/RcppGSLExample/: .RData  .Rhistory  DESCRIPTION  config.status
src/Ccode/wrapper_R/RcppGSLExample/R/: RcppExports.R  colNorm.R
src/Ccode/wrapper_R/RcppGSLExample/src/: GeneralFunctions.cpp  InferenceFunctions.cpp  InferenceFunctions.h  Makevars  Makevars.in  RcppExports.cpp
src/Ccode/wrapper_R/src/: GeneralFunctions.h  IBPsampler.cpp  Makevars.win
(+457 files in other folders)
